--- a/components/css/default.css
+++ b/components/css/default.css
@@ -242,18 +242,18 @@ header > div > *{
     float: right;
 }
 
-.menu ul{
+.menu > ul{
     float: right;
     list-style: none;
     margin: 0;
     /*padding: 0 30px 0 0;*/
 }
-.menu ul li {
+.menu > ul > li {
     float: left;
     position: relative;
 }
 
-.menu ul li > a {
+.menu > ul > li > a {
     color: #666666;
     display: block;
     font-size: 14px;
@@ -273,11 +273,17 @@ header > div > *{
 
 
 .menu-dropdown {
+
+    opacity: 0;
+
+    height: 0;
+    /*padding-bottom: 0;*/
+    pointer-events: none;
     position: fixed;
     left: 0;
     width: 100%;
-    height: 140px;
-    padding: 10px;
+
+    /*padding: 10px;*/
     overflow: hidden;
     z-index: 490;
     background: #000000;
@@ -287,14 +293,13 @@ header > div > *{
     -o-transition: all 0.3s;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
+
+
+
+
 }
 .menu-dropdown .dropdown-item {
-    float: left;
-    margin: 0 10px 10px 0;
-    top: 0;
-    position: relative;
-    min-width: 100px;
-    height: 120px;
+
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
@@ -316,7 +321,6 @@ header > div > *{
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-family: "Cervo",Helvetica,Arial,sans-serif;
     letter-spacing: -0.03em;
     font-size: 1.3em;
     color: white;
@@ -334,11 +338,26 @@ header > div > *{
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000',endColorstr='#00000000',GradientType=0);
 }
 
+.menu ul li:hover .menu-dropdown {
+    /*opacity: 0;*/
+    /*pointer-events: none;*/
+    /*height: 0;*/
+    /*padding-bottom: 0;*/
+    padding: 10px;
+    pointer-events: auto;
+    opacity: 1;
+    height: 140px;
+}
 
 
-
-
-
+.sub-menu-list-item ul li{
+    float: left;
+    margin: 0 10px 10px 0;
+    top: 0;
+    position: relative;
+    min-width: 100px;
+    height: 120px;
+}
 
 .search{
     display: table;
@@ -423,4 +442,7 @@ header > div > *{
     padding: 0;
     position: absolute;
     width: 1px;
+}
+.ui-autocomplete {
+    z-index: 1111;
 }
