--- a/components/css/default.css
+++ b/components/css/default.css
@@ -51,10 +51,13 @@ body:before {
 /*! header ----------------------------------------*/
 
 header{
+    position: fixed;
+    width: 100%;
     border-top: 2px solid #ffce54;
     height: 82px;
     background-color: rgba(255,255,255,1);
     border-bottom: 1px solid #e8e8e8;
+     z-index: 9999;
 }
 /*header > div{*/
     /*display: table;*/
@@ -445,4 +448,479 @@ header > div > *{
 }
 .ui-autocomplete {
     z-index: 1111;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*! menu left ----------------------------------------*/
+
+.side-menu {
+    position: fixed;
+    z-index: 9998;
+    background: white;
+    height: calc(100vh - 82px);
+    /* bottom: 0; */
+    -webkit-transition: left 0.3s ease, right 0.3s ease;
+    transition: left 0.3s ease, right 0.3s ease;
+    overflow: auto;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.side-menu.-left {
+    width: 300px;
+    left: -300px;
+    top: 82px;
+    padding-bottom: 70px;
+}
+.side-menu.-right {
+    width: 440px;
+    right: -440px;
+    box-shadow: inset 3px 0 2px -3px rgba(0, 0, 0, 0.4);
+}
+.side-menu.-sticky {
+    height: calc(100vh -  60px);
+}
+.side-menu.-left.-active {
+    left: 0;
+}
+.side-menu.-right.-active {
+    right: 0;
+}
+.side-menu .section span {
+    display: block;
+    padding: 15px 15px 15px 35px;
+    color: rgba(0, 0, 0, 0.4);
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+}
+.side-menu > .section:first-child span {
+    border-top: none;
+}
+.side-menu .option {
+    font-weight: 400;
+    position: relative;
+}
+.side-menu .option:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.side-menu .option a:first-child {
+    display: block;
+    /*padding: 15px 15px 15px 35px;*/
+    padding: 10px 15px 10px 35px;
+    color: rgba(0, 0, 0, 0.84);
+}
+.side-menu .option a:first-child:hover,
+.side-menu .option a:first-child:focus {
+    text-decoration: none;
+}
+.side-menu .option a:first-child > i.icon {
+    vertical-align: middle;
+    padding-right: 20px;
+    color: rgba(0, 0, 0, 0.54);
+}
+.side-menu .option a:first-child > img.icon {
+    width: 24px;
+    opacity: 0.54;
+    margin-right: 20px;
+    margin-left: 2px;
+}
+.side-menu .option a:first-child.-active {
+    color: #1d8b90;
+    background-color: rgba(0, 0, 0, 0.05);
+}
+.side-menu .option a:first-child.-active i {
+    color: #1d8b90;
+}
+.side-menu .option .helptoggle {
+    position: absolute;
+    opacity: 0;
+    z-index: 10;
+    right: 0;
+    top: 0;
+    padding: 20px 10px;
+    line-height: 0;
+    -webkit-transition: opacity 0.2s ease;
+    transition: opacity 0.2s ease;
+}
+.side-menu .option .helptoggle:focus {
+    opacity: 1;
+}
+.side-menu .option .helptoggle i.icon {
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.2);
+    -webkit-transition: color 0.2s ease;
+    transition: color 0.2s ease;
+}
+.side-menu .option .helptoggle:hover i.icon {
+    color: rgba(0, 0, 0, 0.3);
+}
+.side-menu .option:hover .helptoggle,
+.side-menu .option a:first-child:focus + .helptoggle {
+    opacity: 1;
+}
+
+
+
+@media (max-width: 1199px) {
+    .side-menu.-left.-active ~ .container-fluid {
+        padding-left: 15px;
+    }
+    .side-menu.-left {
+        z-index: 120;
+        top: 0;
+        height: 100vh !important;
+    }
+    .side-menu.-left.-active ~ .sidemenu-backdrop.-left {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+@media (max-width: 1920px) {
+    .side-menu.-right.-active ~ .container-fluid {
+        padding-right: 15px;
+    }
+    .side-menu.-right {
+        z-index: 120;
+        top: 0;
+        height: 100vh !important;
+        border-left: 0;
+        box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    .side-menu.-right .header {
+        height: 110px;
+        background-color: #19777b;
+        color: rgba(255, 255, 255, 0.84);
+    }
+    .side-menu.-right.-active ~ .sidemenu-backdrop.-right {
+        opacity: 1;
+        pointer-events: all;
+    }
+    .side-menu.-right .-hidden-notlg {
+        display: none;
+    }
+}
+.close {
+    text-shadow: none;
+    color: rgba(255, 255, 255, 0.3);
+    opacity: 1;
+}
+.close:hover,
+.close:focus {
+    color: rgba(255, 255, 255, 0.6);
+    opacity: 1;
+}
+hr.seperator {
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    margin: 10px -15px;
+}
+i.-icontext {
+    font-size: 14px;
+}
+
+
+
+
+
+
+
+
+
+/*! content ----------------------------------------*/
+
+.content{
+    position: relative;
+    left: 300px;
+    top: 82px;
+    width: calc(100% - 300px);
+
+}
+.page-content{
+    padding: 18px;
+}
+
+
+
+
+.clash-card {
+    background-color: rgba(255,255,255,0.7);
+    width: 196px;
+    display: inline-block;
+    margin: auto;
+    border-radius: 6px;
+    position: relative;
+    text-align: center;
+    box-shadow: -1px 15px 30px -12px black;
+
+}
+
+.clash-card__image {
+    position: relative;
+    height: 110px;
+    /* margin-bottom: 15px; */
+    overflow: hidden;
+    /* border-top-left-radius: 14px; */
+    /* border-top-right-radius: 14px; */
+}
+
+
+
+.clash-card__image--archer img {
+    position: absolute;
+    max-width: 100%;
+
+    border-radius: 5px 5px 0 0;
+
+    -webkit-transform: skewY(-2.2deg);
+    transform: skewY(-2.2deg);
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-backface-visibility: hidden;
+}
+
+.clash-card__level {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+    margin-bottom: 3px;
+    text-align: left;
+}
+
+.clash-card__level--barbarian {
+    color: #EC9B3B;
+}
+
+.clash-card__level--archer {
+    color: #ef5350;
+}
+
+.clash-card__level--giant {
+    color: #F6901A;
+}
+
+.clash-card__level--goblin {
+    color: #82BB30;
+}
+
+.clash-card__level--wizard {
+    color: #4FACFF;
+}
+
+.clash-card__unit-name {
+    font-size: 26px;
+    color: black;
+    font-weight: 900;
+    margin-bottom: 5px;
+}
+
+.clash-card__unit-description {
+    padding: 0 10px;
+    /*margin-bottom: 10px;*/
+}
+.clash-card__unit-description > p{
+    margin: 0;
+    text-align: left;
+}
+
+.clash-card__unit-stats--barbarian {
+    background: #EC9B3B;
+}
+.clash-card__unit-stats--barbarian .one-third {
+    border-right: 1px solid #BD7C2F;
+}
+
+.clash-card__unit-stats--archer {
+    background: #EE5487;
+}
+.clash-card__unit-stats--archer .one-third {
+    border-right: 1px solid #D04976;
+}
+
+.clash-card__unit-stats--giant {
+    background: #F6901A;
+}
+.clash-card__unit-stats--giant .one-third {
+    border-right: 1px solid #de7b09;
+}
+
+.clash-card__unit-stats--goblin {
+    background: #82BB30;
+}
+.clash-card__unit-stats--goblin .one-third {
+    border-right: 1px solid #71a32a;
+}
+
+.clash-card__unit-stats--wizard {
+    background: #4FACFF;
+}
+.clash-card__unit-stats--wizard .one-third {
+    border-right: 1px solid #309eff;
+}
+
+.clash-card__unit-stats {
+    color: white;
+    font-weight: 700;
+    border-bottom-left-radius: 14px;
+    border-bottom-right-radius: 14px;
+}
+.clash-card__unit-stats a {
+    display: inline-block;
+    color: #951009;
+    text-decoration: none;
+    padding: 5px;
+    line-height: 18px;
+    border-radius: 3px;
+}
+
+.clash-card__unit-stats a:hover {
+    color: #450300;
+    background: rgba(223, 74, 66, 0.5);
+    transition: .25s ease-in-out;
+}
+.clash-card__unit-stats .one-third {
+    width: 33%;
+    float: left;
+    padding: 20px 15px;
+}
+.clash-card__unit-stats sup {
+    position: absolute;
+    bottom: 4px;
+    font-size: 45%;
+    margin-left: 2px;
+}
+.clash-card__unit-stats .stat {
+    position: relative;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+.clash-card__unit-stats .stat-value {
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+}
+.clash-card__unit-stats .no-border {
+    border-right: none;
+}
+
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+.slick-prev {
+    left: 100px;
+    z-index: 999;
+}
+
+.slick-next {
+    right: 100px;
+    z-index: 999;
+}
+
+
+
+.c_info {
+    /* display: table-cell; */
+    /* vertical-align: middle; */
+    /* padding-top: 5px; */
+    /* padding-left: 10px; */
+    /* line-height: 18px; */
+    position: relative;
+    text-align: right;
+    margin-right: 5px;
+    margin-top: -5px;
+}
+.c_name {
+    font-size: 20px;
+    font-weight: 500;
+    color: #3c3c3c;
+}
+.c_industry {
+    font-weight: 400;
+    font-size: 12px;
+    /*letter-spacing: 0.05em;*/
+    color: #7e8890;
+}
+/*#c_stars span {*/
+    /*background-position: 0 0;*/
+    /*vertical-align: super;*/
+/*}*/
+/*#c_stars, #c_stars span {*/
+    /*display: inline-block;*/
+    /*background: url('../images/stars.png') 0 -12px repeat-x;*/
+    /*width: 60px;*/
+    /*height: 12px;*/
+/*}*/
+
+#c_stars, #c_stars span {
+    display: inline-block;
+    background: url('../images/stars.png') 0 -12px repeat-x;
+    width: 60px;
+    height: 12px;
+}
+
+#c_stars, #c_stars span {
+    display: inline-block;
+    background: url('../images/stars.png') 0 -12px repeat-x;
+    width: 60px;
+    height: 12px;
+}
+
+#c_stars span {
+    background-position: 0 0;
+    vertical-align: super;
+    float: left;
+}
+.c_num {
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 500;
+    /*vertical-align: super;*/
+}
+
+
+
+
+
+
+
+/*! player ----------------------------------------*/
+
+#audioplayer {
+    position: fixed;
+    left: 0;
+    bottom: -1px;
+    top: auto;
+    background: black;
+    color: white;
+    overflow: visible;
+    z-index: 9999;
+    height: 70px;
+    width: 100%;
+}
+#audioplayer .blur-container {
+    display: block;
+    overflow: hidden;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
