--- a/components/css/default.css
+++ b/components/css/default.css
@@ -659,7 +659,7 @@ i.-icontext {
     width: 196px;
     display: inline-block;
     margin: auto;
-    border-radius: 6px;
+    border-radius: 3px;
     position: relative;
     text-align: center;
     box-shadow: -1px 15px 30px -12px black;
@@ -681,7 +681,7 @@ i.-icontext {
     position: absolute;
     max-width: 100%;
 
-    border-radius: 5px 5px 0 0;
+    /*border-radius: 5px 5px 0 0;*/
 
     -webkit-transform: skewY(-2.2deg);
     transform: skewY(-2.2deg);
@@ -924,3 +924,120 @@ i.-icontext {
     height: 100%;
     z-index: -1;
 }
+#audioplayer .blur-container .blur {
+    position: absolute;
+    background-position: center;
+    background-size: cover;
+    left: -50px;
+    right: -50px;
+    top: -50px;
+    bottom: -50px;
+}
+
+#audioplayer .cover {
+    position: relative;
+    float: left;
+    z-index: 100;
+    width: 124px;
+    height: 70px;
+}
+#audioplayer .cover img {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+}
+
+#audioplayer .player-bar {
+    position: absolute;
+    margin-left: 124px;
+    height: 70px;
+    width: calc(100% - 124px);
+}
+
+#audioplayer .player-bar-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    background-position: center;
+    background-size: cover;
+    z-index: -1;
+}
+
+#audioplayer .toggle-playing {
+
+    float: left;
+}
+
+
+
+/* play bottom */
+
+.play-pause {
+    display: block;
+    width: 42px;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    position: relative;
+}
+
+.play-pause__playhead {
+    display: block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 25px 0 25px 42px;
+    border-color: transparent transparent transparent #2A2C2D;
+    transform-origin: 100% 50%;
+}
+
+.play-pause__pausehead {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: 0 50%;
+}
+.play-pause__pausehead:before, .play-pause__pausehead:after {
+    content: "";
+    flex: 1;
+    width: 50%;
+    height: 100%;
+    background: #2A2C2D;
+}
+.play-pause__pausehead:before {
+    margin-right: 4px;
+}
+.play-pause__pausehead:after {
+    margin-left: 4px;
+}
+
+body {
+    background: #FBFBFB;
+}
+
+#app {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
