--- a/components/css/default.css
+++ b/components/css/default.css
@@ -1204,4 +1204,136 @@ i.-icontext {
     z-index: 75;
 }
 
+#audioplayer .view-controls .options {
+    display: flex;
+    height: 70px;
+    width: 100%;
+    background-image: linear-gradient(transparent 0%, rgba(0,0,0,0.2) 70%, rgba(0,0,0,0.4) 100%);
+    color: #fff;
+    box-sizing: border-box;
+    padding: 0 8px;
+    align-items: center;
+}
 
+.tray-button {
+    height: 70px;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    box-sizing: border-box;
+}
+.tray-button > span {
+    font-size: 16px;
+    font-weight: 500;
+}
+.tray-button > *:not(:last-child) {
+    margin-right: 16px;
+}
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+}
+
+
+
+/* hide menu */
+
+.mdl-card {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    font-size: 16px;
+    font-weight: 400;
+    min-height: 200px;
+    overflow: hidden;
+    width: 330px;
+    z-index: 1;
+    position: relative;
+    background: #fff;
+    border-radius: 2px;
+    box-sizing: border-box;
+}
+.mdl-shadow--2dp {
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+}
+.tray-menu {
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 40px;
+    color: rgba(0,0,0,0.87);
+}
+.flex {
+    flex-grow: 1;
+}
+.tray-menu {
+    position: absolute;
+    right: 8px;
+    bottom: 64px;
+    transform: scale(0);
+    transform-origin: 268px bottom;
+    transition: transform 0.2s ease;
+}
+.tray-menu.open {
+    transform: scale(1);
+}
+
+
+
+.op-volume {
+    position: absolute;
+    width: 50px;
+    transform: scale(0);
+    transform-origin: 268px bottom;
+    transition: transform 0.2s ease;
+}
+.op-volume.open {
+    transform: scale(1);
+}
+
+
+
+
+.tray-menu .row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 56px;
+    border-bottom: 1px solid #eee;
+    padding: 0 16px;
+    box-sizing: border-box;
+}
+.tray-menu .row.lg {
+    height: 72px;
+}
+
+.tray-menu .clickable {
+    cursor: pointer;
+}
+
+
+.tray-menu .final {
+    background-color: #f5f5f5;
+    border-bottom: none;
+}
+
+#op-volume{
+    cursor: pointer;
+}
