--- a/components/css/watch.css
+++ b/components/css/watch.css
@@ -12,7 +12,27 @@
 }
 .player-container{
     text-align: center;
-    width: 800px;
+    /*width: 800px;*/
     margin: 0 auto;
+
+
+}
+
+#player{
+    position: absolute;
+    top: calc(50% - 35px);
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+
+
+    transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
+}
+
+#player.unlock{
+    top: 50%;
 }
 
