--- a/components/css/default.css
+++ b/components/css/default.css
@@ -426,7 +426,18 @@ header > div > *{
     padding: 1px 10px;
 }
 
-
+.input-search:after {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: -15px;
+    content: '';
+    width: 0;
+    height: 0;
+    display: block;
+    border-left: 15px solid #FFFFFF;
+    border-bottom: 34px solid transparent;
+}
 
 
 
@@ -450,8 +461,75 @@ header > div > *{
 
 
 
+.ui-autocomplete {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    float: left;
+    display: none;
+    min-width: 160px;
+    padding: 4px 0;
+    margin: 0 0 10px 25px;
+    list-style: none;
+    background-color: #ffffff;
+    border-color: #ccc;
+    border-color: rgba(0, 0, 0, 0.2);
+    border-style: solid;
+    border-width: 1px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+    *border-right-width: 2px;
+    *border-bottom-width: 2px;
+}
 
+.ui-menu-item > a.ui-corner-all {
+    display: block;
+    padding: 3px 15px;
+    clear: both;
+    font-weight: normal;
+    line-height: 18px;
+    color: #555555;
+    white-space: nowrap;
+    text-decoration: none;
+}
 
+/*.ui-state-hover, .ui-state-active:hover {*/
+    /*!*color: #ffffff;*!*/
+    /*color: #0088cc;*/
+    /*border: none;*/
+    /*text-decoration: none;*/
+    /*font-weight: inherit;*/
+    /*background-color: transparent;*/
+    /*border-radius: 0px;*/
+    /*-webkit-border-radius: 0px;*/
+    /*-moz-border-radius: 0px;*/
+    /*background-image: none;*/
+/*}*/
+
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active,
+a.ui-button:active,
+.ui-button:active,
+.ui-button.ui-state-active:hover {
+    /*border: 1px solid #003eff;*/
+    /*background: #007fff;*/
+    /*font-weight: normal;*/
+    /*color: #ffffff;*/
+
+    border: 1px solid transparent;
+    background: transparent;
+    font-weight: inherit;
+    /*color: #0088cc;*/
+    color: #08c;
+}
 
 
 
