--- a/components/css/search.css
+++ b/components/css/search.css
@@ -38,7 +38,8 @@
 }
 @media (min-width: 700px) {
     .card {
-        max-width: 320px;
+        /*max-width: 320px;*/
+        width: 320px;
         margin-right: 20px;
         margin-bottom: 20px;
     }
