--- a/components/css/watch.css
+++ b/components/css/watch.css
@@ -1,3 +1,36 @@
+:-webkit-full-screen {
+    /* properties */
+}
+
+:-moz-full-screen {
+    /* properties */
+}
+
+:-ms-fullscreen {
+    /* properties */
+}
+
+:full-screen { /*pre-spec */
+    /* properties */
+}
+
+:fullscreen { /* spec */
+    /* properties */
+}
+
+/* deeper elements */
+:-webkit-full-screen video {
+    width: 100% !important;
+    height: 100% !important;
+}
+
+/* styling the backdrop*/
+::backdrop {
+    /* properties */
+}
+::-ms-backdrop {
+    /* properties */
+}
 
 
 .page-watch{
@@ -35,4 +68,9 @@
 #player.unlock{
     top: 50%;
 }
+
+
+
+
+
 
