--- a/components/css/search.css
+++ b/components/css/search.css
@@ -21,12 +21,24 @@
     position: relative;
     margin-bottom: 20px;
     padding-bottom: 30px;
-    background: #fefff9;
+    /*background: #fefff9;*/
     color: #363636;
     text-decoration: none;
-    -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
-    box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
+    /*-moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;*/
+    /*-webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;*/
+    /*box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;*/
+
+    background: hsla(0,0%,100%,0.5);
+
+    -ms-transition: all 0.1s cubic-bezier(.7,.2,.17,1);
+    -webkit-transition: all 0.1s cubic-bezier(.7,.2,.17,1);
+    transition: all 0.1s cubic-bezier(.7,.2,.17,1);
+
+    -moz-box-shadow: 0 0 2px hsla(0,0%,0%,0.1);
+    -webkit-box-shadow: 0 0 2px hsla(0,0%,0%,0.1);
+    box-shadow: 0 0 2px hsla(0,0%,0%,0.1);
+
+
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -68,14 +80,14 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-color: rgba(255, 255, 255, 0.15);
+    /*background-color: rgba(255, 255, 255, 0.15);*/
     background-blend-mode: overlay;
     -moz-border-radius: 4px 4px 0 0;
     -webkit-border-radius: 4px;
     border-radius: 4px 4px 0 0;
 }
 .card .card-header:hover, .card .card-header:focus {
-    background-color: rgba(255, 255, 255, 0);
+    /*background-color: rgba(255, 255, 255, 0);*/
 }
 .card .card-title {
     background: rgba(157, 187, 63, 0.85);
@@ -115,10 +127,19 @@
     transition-timing-function: ease-in-out;
 }
 .card:hover, .card:focus {
-    background: white;
-    -moz-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
+    /*background: white;*/
+    /*-moz-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;*/
+    /*-webkit-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;*/
+    /*box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;*/
+
+    background: hsla(0,0%,100%,1);
+
+    -ms-transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+    -moz-box-shadow:  0 46px 12px -16px hsla(0,0%,0%,0.05);
+    -webkit-box-shadow:  0 46px 12px -16px hsla(0,0%,0%,0.05);
+    box-shadow: 0 46px 12px -16px hsla(0,0%,0%,0.05);
 }
 .card:hover .card-title, .card:focus .card-title {
     background: rgba(157, 187, 63, 0.95);
