--- a/components/css/default.css
+++ b/components/css/default.css
@@ -721,30 +721,44 @@ i.-icontext {
     top: 82px;
     width: calc(100% - 300px);
 
+    overflow: hidden;
+
 }
 .page-content{
-    padding: 18px;
+    position: relative;
+    /*padding: 18px;*/
+    top: 82px;
+
+
 }
 
 
+.feed-topic{
+    margin: 30px 0 15px 30px;
+    color: #ffffff;
+}
 
 
 .clash-card {
-    background-color: rgba(255,255,255,0.7);
-    width: 196px;
+    /*background-color: rgba(255,255,255,0.7);*/
+    width: 300px;
     display: inline-block;
     margin: auto;
-    margin-right: 5px;
-    border-radius: 3px;
+    /*margin-right: 5px;*/
+    /*border-radius: 3px;*/
     position: relative;
     text-align: center;
     /*box-shadow: -1px 15px 30px -12px black;*/
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    /*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
+}
+.owl-carousel .owl-item:first-child .clash-card {
+    margin-left: 30px;
 }
 
 .clash-card__image {
     position: relative;
-    height: 110px;
+    height: 169px;
+    margin-bottom: 25px;
     /* margin-bottom: 15px; */
     overflow: hidden;
     /* border-top-left-radius: 14px; */
@@ -759,11 +773,11 @@ i.-icontext {
 
     /*border-radius: 5px 5px 0 0;*/
 
-    -webkit-transform: skewY(-2.2deg);
-    transform: skewY(-2.2deg);
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-backface-visibility: hidden;
+    /*-webkit-transform: skewY(-2.2deg);*/
+    /*transform: skewY(-2.2deg);*/
+    /*-webkit-transform-origin: 0 0;*/
+    /*transform-origin: 0 0;*/
+    /*-webkit-backface-visibility: hidden;*/
 }
 
 .clash-card__level {
@@ -771,9 +785,12 @@ i.-icontext {
     font-size: 12px;
     font-weight: 700;
     margin-bottom: 3px;
-    text-align: left;
-}
 
+    /*text-align: left;*/
+}
+.clash-card__level a{
+    color: #3397b7;
+}
 .clash-card__level--barbarian {
     color: #EC9B3B;
 }
@@ -802,12 +819,12 @@ i.-icontext {
 }
 
 .clash-card__unit-description {
-    padding: 0 10px;
+    padding: 10px;
     /*margin-bottom: 10px;*/
 }
 .clash-card__unit-description > p{
     margin: 0;
-    text-align: left;
+    /*text-align: left;*/
 }
 
 .clash-card__unit-stats--barbarian {
@@ -850,10 +867,11 @@ i.-icontext {
     font-weight: 700;
     border-bottom-left-radius: 14px;
     border-bottom-right-radius: 14px;
+
 }
 .clash-card__unit-stats a {
     display: inline-block;
-    color: #951009;
+    color: #af5252;
     text-decoration: none;
     padding: 5px;
     line-height: 18px;
@@ -861,8 +879,8 @@ i.-icontext {
 }
 
 .clash-card__unit-stats a:hover {
-    color: #450300;
-    background: rgba(223, 74, 66, 0.5);
+    color: #309eff;
+    /*background: rgba(223, 74, 66, 0.5);*/
     transition: .25s ease-in-out;
 }
 .clash-card__unit-stats .one-third {
@@ -920,7 +938,7 @@ i.-icontext {
     position: relative;
     text-align: right;
     margin-right: 5px;
-    margin-top: -5px;
+    /* margin-top: -5px; */
 }
 .c_name {
     font-size: 20px;
@@ -967,6 +985,7 @@ i.-icontext {
     display: inline-block;
     font-size: 15px;
     font-weight: 500;
+    color: #ffffff;
     /*vertical-align: super;*/
 }
 
@@ -1280,7 +1299,7 @@ i.-icontext {
     display: flex;
     height: 70px;
     width: 100%;
-    background-image: linear-gradient(transparent 0%, rgba(0,0,0,0.2) 70%, rgba(0,0,0,0.4) 100%);
+    /*background-image: linear-gradient(transparent 0%, rgba(0,0,0,0.2) 70%, rgba(0,0,0,0.4) 100%);*/
     color: #fff;
     box-sizing: border-box;
     padding: 0 8px;
