--- a/components/css/search.css
+++ b/components/css/search.css
@@ -10,7 +10,7 @@
     justify-content: center;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-top: 15px;
+    /*margin-top: 15px;*/
     padding: 1.5%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -148,4 +148,67 @@
 
 img {
     max-width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+.absolute-center {
+    position: absolute;
+    margin: 1rem 0 3rem;
+    text-align: center;
+    bottom: -60px;
+}
+
+a.button {
+    box-sizing: border-box;
+    display: inline-block;
+    width: 8em;
+    height: 2.25em;
+    padding: 0.5em 1em;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    text-align: center;
+    color: #333;
+    white-space: nowrap;
+    line-height: 1.4;
+    font-size: 1em;
+    text-decoration: none;
+    transition: width 0.1s ease, height 0.4s ease, border-width 0.4s ease, border-radius 0.4s ease, border-color 0.4s ease, padding 0.4s ease;
+}
+a.button:focus {
+    outline: none;
+    border-color: #DDD;
+}
+a.button:hover {
+    background: #FAFAFA;
+}
+a.button.loading {
+    height: 24px;
+    width: 24px;
+    padding: 0;
+    border-width: 2px;
+    border-radius: 17px;
+    border-color: #eee #eee #eee #999;
+    background: #f1f1f1;
+    /*background: #fff;*/
+    font-size: 0;
+    color: transparent;
+    pointer-events: none;
+    animation: spin 1.2s infinite linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
