--- a/components/css/home.css
+++ b/components/css/home.css
@@ -13,9 +13,19 @@ section:after {
     height: 0;
 }
 
-.feed{
-    background: #151515;
-}
+/*.feed{*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    /*text-align: center;*/
+    /*background-image: url("../images/bg-pattern.png");*/
+    /*background-repeat: repeat;*/
+    /*background-size: 103px 103px;*/
+    /*color: white;*/
+    /*width: 100%;*/
+    /*height: 100% !important;*/
+    /*min-height: 100%;*/
+
+/*}*/
 
 .feed > section{
     /*border-bottom: 1px solid #EBEBEB;*/
@@ -45,3 +55,125 @@ section:after {
     min-height: 150px;
     background: url(../owl.carousel/dist/assets/ajax-loader.gif) no-repeat center center;
 }
+
+
+
+
+
+/* The card */
+.feed .card {
+    position: relative;
+    height: 225px;
+    width: 400px;
+    margin: 20px;
+    background-color: #FFF;
+    -webkit-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+}
+
+/* Image on the left side */
+.feed .card-thumbnail {
+    float: left;
+    position: relative;
+    left: 10px;
+    top: -20px;
+    height: 124px;
+    width: 220px;
+    -webkit-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+    overflow: hidden;
+}
+
+/*object-fit: cover; */
+/*object-position: center; */
+.feed img.left {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: auto;
+    width: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+/* Right side of the card */
+.feed .right {
+    margin: 20px;
+}
+
+.feed h1 {
+    margin-left: 230px;
+    padding-top: 15px;
+    font-size: 1.3rem;
+    color: #4B4B4B;
+}
+
+.feed .author {
+    background-color: #9ECAFF;
+    height: 30px;
+    width: 110px;
+    border-radius: 20px;
+}
+
+.feed .author > img {
+    padding-top: 5px;
+    margin-left: 10px;
+    float: left;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+
+.feed h2 {
+    padding-top: 8px;
+    margin-right: 6px;
+    text-align: right;
+    font-size: 0.8rem;
+}
+
+.feed .separator {
+    margin-top: 10px;
+    border: 1px solid #C3C3C3;
+}
+
+.feed p {
+    text-align: justify;
+    padding-top: 10px;
+    font-size: 0.95rem;
+    line-height: 150%;
+    color: #4B4B4B;
+}
+
+/* DATE of release */
+.feed h5 {
+    position: absolute;
+    left: 30px;
+    bottom: -120px;
+    font-size: 6rem;
+    color: #C3C3C3;
+}
+
+.feed h6 {
+    position: absolute;
+    left: 30px;
+    bottom: -55px;
+    font-size: 2rem;
+    color: #C3C3C3;
+}
+
+/* Those futur buttons */
+.feed ul {
+    margin-left: 250px;
+}
+
+.feed li {
+    display: inline;
+    list-style: none;
+    padding-right: 40px;
+    color: #7B7B7B;
+}
+
+
