--- a/components/css/search.css
+++ b/components/css/search.css
@@ -28,7 +28,8 @@
     /*-webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;*/
     /*box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;*/
 
-    background: hsla(0,0%,100%,0.5);
+    /*background: hsla(0,0%,100%,0.5);*/
+    background: hsla(0,0%,100%,1);
 
     -ms-transition: all 0.1s cubic-bezier(.7,.2,.17,1);
     -webkit-transition: all 0.1s cubic-bezier(.7,.2,.17,1);
@@ -132,18 +133,17 @@
     /*-webkit-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;*/
     /*box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;*/
 
-    background: hsla(0,0%,100%,1);
-
-    -ms-transform: scale(1.02);
-    -webkit-transform: scale(1.02);
-    transform: scale(1.02);
-    -moz-box-shadow:  0 46px 12px -16px hsla(0,0%,0%,0.05);
-    -webkit-box-shadow:  0 46px 12px -16px hsla(0,0%,0%,0.05);
-    box-shadow: 0 46px 12px -16px hsla(0,0%,0%,0.05);
+    /*background: hsla(0,0%,100%,1);*/
+    /*-ms-transform: scale(1.01);*/
+    /*-webkit-transform: scale(1.01);*/
+    /*transform: scale(1.01);*/
+    -moz-box-shadow: 0 33px 38px -16px hsla(0,0%,0%,0.05);
+    -webkit-box-shadow:  0 33px 38px -16px hsla(0,0%,0%,0.05);
+    box-shadow: 0 33px 38px -16px hsla(0,0%,0%,0.05);
 }
-.card:hover .card-title, .card:focus .card-title {
-    background: rgba(157, 187, 63, 0.95);
-}
+/*.card:hover .card-title, .card:focus .card-title {*/
+    /*background: rgba(157, 187, 63, 0.95);*/
+/*}*/
 
 
 img {
