--- a/components/css/default.css
+++ b/components/css/default.css
@@ -801,7 +801,8 @@ i.-icontext {
 
 .feed-topic{
     margin: 30px 0 15px 30px;
-    color: #ffffff;
+    /*color: #ffffff;*/
+    color: #ef5350;
 }
 
 
@@ -821,6 +822,7 @@ i.-icontext {
     bottom: -1px;
     top: auto;
     color: white;
+
     overflow: visible;
     z-index: 9999;
     height: 70px;
