--- a/components/css/home.css
+++ b/components/css/home.css
@@ -66,7 +66,7 @@ section:after {
     position: relative;
     height: 225px;
     width: 400px;
-    margin: 20px;
+    margin: 5px;
 
     color: #363636;
 
@@ -88,6 +88,7 @@ section:after {
     top: -15px;
     height: 110px;
     width: 196px;
+    z-index: 1;
     -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
@@ -110,7 +111,7 @@ section:after {
 
 /* Right side of the card */
 .feed .right {
-    padding: 20px;
+    padding: 10px;
     position: absolute;
     height: 100%;
 }
@@ -122,6 +123,23 @@ section:after {
     /* padding-top: 15px; */
     font-size: 14px;
     color: #4B4B4B;
+
+
+
+
+    height: 46px;
+
+    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+
+
 
 }
 
@@ -190,6 +208,7 @@ section:after {
     margin-top: 10px;
     bottom: 0;
     position: absolute;
+    margin-bottom: 5px;
 }
 
 .feed li {
