--- a/components/css/default.css
+++ b/components/css/default.css
@@ -51,7 +51,8 @@ body{
 header{
     position: fixed;
     width: 100%;
-    border-top: 2px solid #ffce54;
+    border-top: 2px solid #fcb501;
+    top: 0;
     height: 82px;
     background-color: rgba(255,255,255,1);
     border-bottom: 1px solid #e8e8e8;
@@ -143,12 +144,12 @@ header > div > *{
     border-bottom: 30px solid transparent;
 }
 .nav ul li:last-child > a {
-    background: #ffce54;
+    background: #fcb501;
     padding: 0 25px 0 30px;
     color: #FFFFFF;
 }
 .nav ul li:last-child > a:hover {
-    background: #ffce54;
+    background: #fcb501;
 }
 .nav ul li > a {
     position: relative;
@@ -176,7 +177,7 @@ header > div > *{
     border-left: 15px solid #f2f2f2;
 }
 .nav ul li > a.logo {
-    background: #ffce54;
+    background: #fcb501;
     /* width: 30px; */
     /* height: 30px; */
     /* padding: 15px 30px 15px 15px; */
@@ -199,7 +200,7 @@ header > div > *{
     top: 100%;
     width: 180px;
     border-top: 1px solid rgba(0, 0, 0, 0.05);
-    border-bottom: 3px solid #ffce54;
+    border-bottom: 3px solid #fcb501;
     border-radius: 0 0 3px 3px;
     overflow: hidden;
 }
@@ -405,7 +406,7 @@ header > div > *{
     transition: all 0.3s linear 0s;
 }
 #search ul li:last-child a {
-    background: #ffce54;
+    background: #fcb501;
     padding: 0 25px 0 30px;
     color: #FFFFFF;
     line-height: 36px;
@@ -416,11 +417,11 @@ header > div > *{
 #search input[type=search] {
     background: transparent;
     border: none;
-    border-bottom: 2px solid #ffce54;
+    border-bottom: 2px solid #fcb501;
     -webkit-appearance: none;
 
     font-size: 16px;
-    color: #ffce54;
+    color: #fcb501;
     line-height: 2;
     /* top: -100px; */
     width: 320px;
@@ -772,10 +773,34 @@ i.-icontext {
 }
 
 
+html{
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    width: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.wrapper{
+    min-height: 100%;
+    position: relative;
+    margin-top: 82px;
+
+    padding-bottom: 82px;
 
 
-
-
+}
+.wrapper:before, .wrapper:after {
+    display: table;
+    content: " ";
+}
+.wrapper:after {
+    clear: both;
+}
 
 
 
@@ -784,7 +809,6 @@ i.-icontext {
 .content{
     position: relative;
     left: 300px;
-    top: 82px;
     width: calc(100% - 300px);
 
     overflow: hidden;
@@ -792,10 +816,7 @@ i.-icontext {
 }
 .page-content{
     position: relative;
-    /*padding: 18px;*/
-    top: 82px;
-
-
+    /*top: 82px;*/
 }
 
 
@@ -1290,4 +1311,57 @@ i.-icontext {
 
 #op-volume{
     cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1100;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    color: white;
+    font-size: 0.8em;
+    overflow: hidden;
+    padding-top: 1px;
+    background: rgba(0,0,0,0.5);
+
+    -moz-transition: height 0.3s;
+    -ms-transition: height 0.3s;
+    -o-transition: height 0.3s;
+    -webkit-transition: height 0.3s;
+    transition: height 0.3s;
+}
+.footer > a {
+    border-right: 1px solid white;
+    color: white;
+    text-decoration: none;
+    padding: 0 10px 0;
+    text-transform: uppercase;
+    line-height: 11px;
+    height: 10px;
+    margin: 10px 0;
+    float: left;
+}
+.footer > a:last-child {
+    border-right: none;
 }
