--- a/components/css/default.css
+++ b/components/css/default.css
@@ -831,7 +831,7 @@ body {
 
 
 .feed-topic{
-    margin: 30px 0 15px 30px;
+    margin: 20px 0 15px 30px;
     /*color: #ffffff;*/
     color: #ef5350;
 }
@@ -1066,7 +1066,7 @@ body {
 }
 
 .slider-container .slider-bars .slider-drag{
-    margin-top: 13px;
+    /*margin-top: 13px;*/
     height: 3px;
     width: 100%;
     /*border: solid 1px rgba(207,65,60,0.1);*/
@@ -1075,6 +1075,7 @@ body {
     bottom: 0;
     margin: auto 0;
     cursor: pointer;
+    z-index: 1;
 }
 .slider-container .slider-bars .slider-drag:before{
     content: ' ';
@@ -1099,11 +1100,16 @@ body {
     margin: auto 0;
 }
 
-.slider-container .slider-bars .slider-drag:hover + #progress-behind{
-    -ms-transform: scale(1,3);
-    -webkit-transform: scale(1,3);
-    transform: scale(1,3);
-    border-radius: 0;
+#video-progress:hover + #progress-behind{
+    -ms-transform: scale(1,1.9);
+    -webkit-transform: scale(1,1.9);
+    transform: scale(1,1.9);
+}
+#video-progress:hover .ui-widget-header {
+    /*background: rgba(110,194,194,1);*/
+    -ms-transform: scale(1,1.9);
+    -webkit-transform: scale(1,1.9);
+    transform: scale(1,1.9);
 }
 
 /*.slider-container .slider-bars .slider-drag:hover .ui-slider-handle {*/
@@ -1153,7 +1159,8 @@ body {
     cursor: pointer;
 }
 .slider-container .slider-bars .ui-widget-header {
-    background: rgba(110,194,194,1);
+    /*background: rgba(110,194,194,1);*/
+    background: #fcb501;
 }
 
 /* -! time display */
@@ -1327,18 +1334,57 @@ body {
 #video-volume.slider-container {
      margin: auto auto;
 }
+#video-volume.slider-container .slider-bars .ui-widget-header {
 
+    background: #fcb501;
+    width: 2px;
+}
 #video-volume.slider-container .slider-bars .slider-drag {
     /*margin-top: 13px;*/
     height: 100%;
     width: 3px;
-    border: solid 1px rgba(207,65,60,0.1);
+    /*border: solid 1px rgba(207,65,60,0.1);*/
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    cursor: pointer;
+    z-index: 1;
+}
+#video-volume.slider-container .slider-bars .slider-drag:before{
+    content: ' ';
+
+    height: 100%;
+    width: 2px;
+    /*border: solid 1px rgba(207,65,60,0.1);*/
     position: absolute;
     top: 0;
     bottom: 0;
     margin: auto 0;
     cursor: pointer;
 }
+
+#vl-progress-behind{
+    height: 100%;
+    width: 2px;
+    background: rgba(0,0,0,0.2);
+    /*border: solid 1px rgba(207,65,60,0.1);*/
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+}
+
+/*#vl-progress:hover + #vl-progress-behind{*/
+    /*-ms-transform: scale(1.9,1);*/
+    /*-webkit-transform: scale(1.9,1);*/
+    /*transform: scale(1.9,1);*/
+/*}*/
+/*#vl-progress-behind:hover .ui-widget-header {*/
+    /*-ms-transform: scale(1.9,1);*/
+    /*-webkit-transform: scale(1.9,1);*/
+    /*transform: scale(1.9,1);*/
+/*}*/
 
 
 
@@ -1374,7 +1420,9 @@ body {
 
 #op-volume{
     cursor: pointer;
+    padding: 20px 0;
 }
+
 
 
 
